--- a/SymbolicCalendar.html
+++ b/SymbolicCalendar.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
     <title>Calendrier symbolique</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="ressources/styles.css">
+    <link rel="stylesheet" href="https://jccarius.art/52emblemes/ressources/styles.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="ressources/scripts-1.js"></script>
-    <script src="ressources/scripts-2.js"></script>
+    <script src="ressources/SymbolicCalendar.js"></script>
+    <script src="ressources/52emblems.js"></script>
   </head>
   <body>
     <div class="position-absolute ecran d-flex justify-content-center align-items-center" style="">
