--- a/SymbolicCalendar.html
+++ b/SymbolicCalendar.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://jccarius.art/52emblemes/ressources/styles.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="ressources/SymbolicCalendar.js"></script>
-    <script src="ressources/52emblems.js"></script>
+    <script src="SymbolicCalendar.js"></script>
+    <script src="52emblems.js"></script>
   </head>
   <body>
     <div class="position-absolute ecran d-flex justify-content-center align-items-center" style="">
